--- a/app.css
+++ b/app.css
@@ -37,7 +37,7 @@
   /* Dark Colors  */
   --accent: #57a0d9; /* Hover color */
   --background: #19171a; /* Background color */
-  --cards: #201e21; /* Cards color */
+  --cards: rgba(32, 30, 33, 0.9); /* Cards color */
 
   /* Fonts Color */
   --fg: #d8dee9; /* Foreground color */
@@ -111,6 +111,7 @@ body {
   background-color: var(--cards);
   box-shadow: 0 5px 7px rgba(0, 0, 0, 0.35);
   border-radius: 5px;
+  backdrop-filter: blur(3px);
 }
 
 .card:hover {
