Update hover styles

--- a/app.css
+++ b/app.css
@@ -37,7 +37,8 @@
   /* Dark Colors  */
   --accent: #57a0d9; /* Hover color */
   --background: #19171a; /* Background color */
-  --cards: rgba(32, 30, 33, 0.1); /* Cards color */
+  --cards: rgba(232, 230, 233, 0.1); /* Cards color */
+  --cards-hover: rgba(232, 230, 233, 1);
 
   /* Fonts Color */
   --fg: #d8dee9; /* Foreground color */
@@ -110,8 +111,9 @@ body {
 .card {
   background-color: var(--cards);
   box-shadow: 0 5px 7px rgba(0, 0, 0, 0.35);
-  border-radius: 5px;
+  border-radius: 8px;
   backdrop-filter: blur(3px);
+  border: 1px solid #ffffff66;
 }
 
 .card:hover {
@@ -273,7 +275,7 @@ body {
   grid-column: 3;
 }
 .button:hover {
-  background-color: var(--accent);
+  background-color: var(--cards-hover);
 }
 .button:hover svg {
   stroke: var(--sfg);
@@ -323,7 +325,7 @@ body {
   width: 80%;
 }
 .listItem:hover {
-  background-color: var(--accent);
+  background-color: var(--cards-hover);
   color: var(--sfg);
 }
 
