--- a/app.css
+++ b/app.css
@@ -23,7 +23,8 @@
   /* Light Colors  */
   --accent: #57a0d9; /* Hover color */
   --background: #f5f5f5; /* Background color */
-  --cards: #e4e6e6; /* Cards color */
+  --cards: rgba(232, 230, 233, 0.1); /* Cards color */
+  --cards-hover: rgba(232, 230, 233, 1);
 
   /* Image background  */
   --imgbg: url(assets/background.jpg); /* Image URL */
@@ -110,7 +111,7 @@ body {
 
 .card {
   background-color: var(--cards);
-  box-shadow: 0 5px 7px rgba(0, 0, 0, 0.35);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.35);
   border-radius: 8px;
   backdrop-filter: blur(3px);
   border: 1px solid #ffffff66;
@@ -118,7 +119,7 @@ body {
 
 .card:hover {
   transform: translateY(-0.2rem);
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.35);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.35);
 }
 
 .timeBlock {
